--- a/index.html
+++ b/index.html
@@ -2,34 +2,26 @@
 <!-- saved from url=(0029)https://bootswatch.com/slate/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Bootswatch: Slate</title>
+  <title>Geolocation</title>
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+  <meta charset="utf-8">
+  <style>
+    /* Always set the map height explicitly to define the size of the div
+     * element that contains the map. */
+    #map {
+      height: 100%;
+    }
+    /* Optional: Makes the sample page fill the window. */
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="./index_files/bootstrap.css" media="screen">
     <link rel="stylesheet" href="./index_files/custom.min.css">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../bower_components/html5shiv/dist/html5shiv.js"></script>
-      <script src="../bower_components/respond/dest/respond.min.js"></script>
-    <![endif]-->
-    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script>
-
-     var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-23019901-1']);
-      _gaq.push(['_setDomainName', "bootswatch.com"]);
-        _gaq.push(['_setAllowLinker', true]);
-      _gaq.push(['_trackPageview']);
-
-     (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-     })();
-
-    </script><style type="text/css">img[src="https://www.assoc-amazon.com/e/ir?t=bootswatch-20&l=as2&o=1&a=1118008189"],
-img[src="https://www.assoc-amazon.com/e/ir?t=bootswatch-20&l=as2&o=1&a=1593275846"],
-img[src="https://www.assoc-amazon.com/e/ir?t=bootswatch-20&l=as2&o=1&a=098057689X"]
-{display:none !important;}</style>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -50,28 +42,22 @@ img[src="https://www.assoc-amazon.com/e/ir?t=bootswatch-20&l=as2&o=1&a=098057689
             <li><a href="" target="_blank">About</a></li>
             <li><a href="" target="_blank">Get Started</a></li>
           </ul>
-
         </div>
       </div>
     </div>
-
-
     <div class="container">
-
       <div class="page-header" id="banner">
         <div class="row">
           <div class="col-lg-8 col-md-7 col-sm-6">
             <h1>Strong Signals</h1>
             <p class="lead">Find Radio Stations near you!</p>
           </div>
+          <!-- MAP -->
+          <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Z9EaO8jJ6KHB6CSF8qWlSQGYNrnJwbA&q=Florida+State+University,Tallahassee+FL" allowfullscreen></iframe>
+           <!--END MAP AIzaSyDh5plev3Sc3H5IvT_ijSh0i5O7XqibyBA -->
+
         </div>
       </div>
     </div>
-
-
-    <script src="./index_files/jquery-1.10.2.min.js"></script>
-    <script src="./index_files/bootstrap.min.js"></script>
-    <script src="./index_files/custom.js"></script>
-  <script type="text/javascript">/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
-
-</body></html>
+</body>
+</html>
