--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0029)https://bootswatch.com/slate/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<link rel="shortcut icon" type="image/ico" href="favicon.ico">
   <title>Geolocation</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
@@ -27,7 +27,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="https://bootswatch.com/" class="navbar-brand">Strong Signals</a>
+          <a href="" class="navbar-brand"><img src="./logo3.png"></a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -37,7 +37,6 @@
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
           </ul>
-
           <ul class="nav navbar-nav navbar-right">
             <li><a href="" target="_blank">About</a></li>
             <li><a href="" target="_blank">Get Started</a></li>
