adding the fusion table

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
             <h1>Strong Signals</h1>
             <p class="lead">Find Radio Stations near you!</p>
           </div>
-          <!-- MAP -->
-          <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Z9EaO8jJ6KHB6CSF8qWlSQGYNrnJwbA&q=Florida+State+University,Tallahassee+FL" allowfullscreen></iframe>
+          <!-- MAP
+          <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Z9EaO8jJ6KHB6CSF8qWlSQGYNrnJwbA&q=Florida+State+University,Tallahassee+FL" allowfullscreen></iframe> -->
+          <iframe width="600" height="450" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col2+from+1sgFKuqJn_mlF9pWAUiYsd-PKDDs9ZyZlCU_nRncl&amp;viz=MAP&amp;h=false&amp;lat=30.4419&amp;lng=-84.2985&amp;t=1&amp;z=12&amp;l=col2&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
            <!--END MAP AIzaSyDh5plev3Sc3H5IvT_ijSh0i5O7XqibyBA -->
 
         </div>
