--- a/index.html
+++ b/index.html
@@ -55,7 +55,47 @@
           <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Z9EaO8jJ6KHB6CSF8qWlSQGYNrnJwbA&q=Florida+State+University,Tallahassee+FL" allowfullscreen></iframe> -->
           <iframe width="600" height="450" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col2+from+1sgFKuqJn_mlF9pWAUiYsd-PKDDs9ZyZlCU_nRncl&amp;viz=MAP&amp;h=false&amp;lat=30.4419&amp;lng=-84.2985&amp;t=1&amp;z=12&amp;l=col2&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
            <!--END MAP AIzaSyDh5plev3Sc3H5IvT_ijSh0i5O7XqibyBA -->
-
+           <div class="col-lg-4 col-md-5 col-sm-6">
+           <div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">WFSU</h3>
+  </div>
+  <div class="panel-body">
+    88.9
+  </div>
+</div>
+<div class="panel panel-default">
+<div class="panel-heading">
+<h3 class="panel-title">WVFS</h3>
+</div>
+<div class="panel-body">
+89.7
+</div>
+</div>
+<div class="panel panel-default">
+<div class="panel-heading">
+<h3 class="panel-title">WANM</h3>
+</div>
+<div class="panel-body">
+90.5
+</div>
+</div>
+<div class="panel panel-default">
+<div class="panel-heading">
+<h3 class="panel-title">WFSQ</h3>
+</div>
+<div class="panel-body">
+91.5
+</div>
+</div>
+<div class="panel panel-default">
+<div class="panel-heading">
+<h3 class="panel-title">W224AT</h3>
+</div>
+<div class="panel-body">
+92.7
+</div>
+</div>
         </div>
       </div>
     </div>
