--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./index_files/custom.min.css">
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <a href="" class="navbar-brand"><img src="./logo55.png"></a>
@@ -56,7 +56,7 @@
           <iframe width="600" height="450" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col2+from+1sgFKuqJn_mlF9pWAUiYsd-PKDDs9ZyZlCU_nRncl&amp;viz=MAP&amp;h=false&amp;lat=30.4419&amp;lng=-84.2985&amp;t=1&amp;z=12&amp;l=col2&amp;y=2&amp;tmplt=2&amp;hml=ONE_COL_LAT_LNG"></iframe>
            <!--END MAP AIzaSyDh5plev3Sc3H5IvT_ijSh0i5O7XqibyBA -->
            <div class="col-lg-4 col-md-5 col-sm-6">
-           <div class="panel panel-default">
+           <div class="panel panel-success">
   <div class="panel-heading">
     <h3 class="panel-title">WFSU</h3>
   </div>
@@ -64,7 +64,7 @@
     88.9
   </div>
 </div>
-<div class="panel panel-default">
+<div class="panel panel-success">
 <div class="panel-heading">
 <h3 class="panel-title">WVFS</h3>
 </div>
@@ -72,7 +72,7 @@
 89.7
 </div>
 </div>
-<div class="panel panel-default">
+<div class="panel panel-success">
 <div class="panel-heading">
 <h3 class="panel-title">WANM</h3>
 </div>
@@ -80,7 +80,7 @@
 90.5
 </div>
 </div>
-<div class="panel panel-default">
+<div class="panel panel-success">
 <div class="panel-heading">
 <h3 class="panel-title">WFSQ</h3>
 </div>
@@ -88,7 +88,7 @@
 91.5
 </div>
 </div>
-<div class="panel panel-default">
+<div class="panel panel-success">
 <div class="panel-heading">
 <h3 class="panel-title">W224AT</h3>
 </div>
